<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:icon="@android:drawable/sym_contact_card"
        android:title="@string/home"
        android:id="@+id/home"

        />
    <item
        android:icon="@android:drawable/sym_contact_card"
        android:title="@string/profile"
        android:id="@+id/profile"

        />

    <item
    android:icon="@android:drawable/sym_contact_card"
    android:title="@string/cropdata"
    android:id="@+id/cropData"

    />
    <item
        android:icon="@android:drawable/sym_contact_card"
        android:title="@string/complain"
        android:id="@+id/complain"

        />
    <item
        android:icon="@android:drawable/sym_contact_card"
        android:title="@string/contact_us"
        android:id="@+id/contact_us"

        />



</menu>